# nattsu-gallery

./: .gitignore  README.md  admin.html  app.js  article.html  astro.config.mjs  dev-server.sh  dev.sh  diagram.md  history.md  index.html  memo.md  package-lock.json  package.json  report.md  schema.md  start-editer.sh  start-editor.sh  start-gallery.sh  start-opus-editer.sh  start-opus-editor.sh  start-writer.sh  styles.css  sync-obsidian.sh
.astro/: data-store.json  settings.json
.astro/collections/: article.schema.json
.github/workflows/: deploy.yml
admin-app/: README.md  index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
admin-app/src-tauri/: Cargo.toml  tauri.conf.json
admin-app/src-tauri/capabilities/: default.json
apps/article-editer/: README.md  article-editer.css  article-editer.js  index.html
apps/opus-editer/: README.md  index.html  opus-editer.css  opus-editer.js  package-lock.json  package.json  server.js
apps/writer/: README.md  index.html  package-lock.json  server.js  (+2 more)
assets/: sample-01.md  sample-02.md  sample-03.md  sample-04.md  sample-05.md  write-sample.md
data/: items.json
docs/: opus-editer-design.md  writer-design.md
js/: grid-view.js  simple-view.js  table-view.js  utils.js
lab/: dropbox-media-test.html  youtube-embed-test.html
scripts/: convert-opus-assets-to-webp.sh  normalize-article-assets.sh  sync-article-from-dropbox.sh
styles/: common.css  grid-view.css  simple-view.css  table-view.css
thumbnails/: .gitkeep
writer/: README.md  index.html  package.json  server.js  writer.js
(+98 files in other folders)
