[package]
name = "nattsu-gallery-admin"
version = "0.1.0"
description = "nattsu Gallery Admin Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the production server.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
